--- a/Home.html
+++ b/Home.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <header>
-    <span class="name">Kalpana Ravindran</span>
-    <nav class="links">
+    <span class="name" ><h2>Kalpana Ravindran</h2></span>
+    <nav class="links" ></nav> 
         <a class="active" href="Home.html">HOME</a>
         <a href="about.html">ABOUT</a>
         <a href="portfolio.html">PORTFOLIO</a>
@@ -28,14 +28,14 @@
         </p>
     </section>
     <footer>
-        <a href="http://twitter.com" target="_blank">
-            <img src="./images/th.jpeg" alt="">
+        <a  href="http://twitter.com" target="_blank">
+            <img class="img_link" src="./images/th.jpeg" alt="">
         </a>
-        <a href="http://facebook.com" target="_blank">
-            <img src="./images/th-2.jpeg" alt="">
+        <a  href="http://facebook.com" target="_blank">
+            <img class="img_link" src="./images/th-2.jpeg" alt="">
         </a>
-        <a href="http://linkedin.com" target="_blank">
-            <img src="./images/th-3.jpeg" alt="">
+        <a  href="http://linkedin.com" target="_blank">
+            <img class="img_link" src="./images/th-3.jpeg" alt="">
         </a>
     </footer>
     
