changes made in footer image

--- a/Home.html
+++ b/Home.html
@@ -29,13 +29,13 @@
     </section>
     <footer>
         <a  href="http://twitter.com" target="_blank">
-            <img class="img_link" src="./images/th.jpeg" alt="">
+            <img class="img_link" src="./images/twitter.svg" alt="">
         </a>
         <a  href="http://facebook.com" target="_blank">
-            <img class="img_link" src="./images/th-2.jpeg" alt="">
+            <img class="img_link" src="./images/facebook.svg" alt="">
         </a>
         <a  href="http://linkedin.com" target="_blank">
-            <img class="img_link" src="./images/th-3.jpeg" alt="">
+            <img class="img_link" src="./images/linkedin.svg" alt="">
         </a>
     </footer>
     
