--- a/about.html
+++ b/about.html
@@ -19,14 +19,14 @@
         </header>
 
         <footer>
-            <a  href="http://twitter.com" >
-                <img class="img_link" src="./images/th.jpeg" alt="">
+            <a  href="http://twitter.com" target="_blank">
+                <img class="img_link" src="./images/twitter.svg" alt="">
             </a>
-            <a  href="http://facebook.com" >
-                <img class="img_link" src="./images/th-2.jpeg" alt="">
+            <a  href="http://facebook.com" target="_blank">
+                <img class="img_link" src="./images/facebook.svg" alt="">
             </a>
-            <a  href="http://linkedin.com" >
-                <img class="img_link" src="./images/th-3.jpeg" alt="">
+            <a  href="http://linkedin.com" target="_blank">
+                <img class="img_link" src="./images/linkedin.svg" alt="">
             </a>
         </footer>
     
