--- a/portfolio.html
+++ b/portfolio.html
@@ -19,15 +19,15 @@
 
 
     <footer>
-            <a  href="http://twitter.com" target="_blank">
-                <img class="img_link" src="./images/th.jpeg" alt="">
-            </a>
-            <a  href="http://facebook.com" target="_blank">
-                <img class="img_link" src="./images/th-2.jpeg" alt="">
-            </a>
-            <a  href="http://linkedin.com" target="_blank">
-                <img class="img_link" src="./images/th-3.jpeg" alt="">
-            </a>
+        <a  href="http://twitter.com" target="_blank">
+            <img class="img_link" src="./images/twitter.svg" alt="">
+        </a>
+        <a  href="http://facebook.com" target="_blank">
+            <img class="img_link" src="./images/facebook.svg" alt="">
+        </a>
+        <a  href="http://linkedin.com" target="_blank">
+            <img class="img_link" src="./images/linkedin.svg" alt="">
+        </a>
     </footer>
 
 </body>
