portfolio.css file added

--- a/Home.html
+++ b/Home.html
@@ -7,15 +7,18 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+    <div name="header">
     <header>
-    <span class="name" ><h2>Kalpana Ravindran</h2></span>
+    <span class="name" >Kalpana Ravindran</span>
     <nav class="links" ></nav> 
         <a class="active" href="Home.html">HOME</a>
         <a href="about.html">ABOUT</a>
         <a href="portfolio.html">PORTFOLIO</a>
     </nav>
     </header>
-    <section>
+    </div>
+    <main>
+      <section>
         <p class="about">
             Intersted in learning Application Devlopment and Testing
         </p>
@@ -26,7 +29,9 @@
             Knowledge makes you great.” <br>
             -A.P.J.Abdul kalam
         </p>
-    </section>
+     
+      </section>
+    </main>
     <footer>
         <a  href="http://twitter.com" target="_blank">
             <img class="img_link" src="./images/twitter.svg" alt="">
