--- a/about.html
+++ b/about.html
@@ -5,19 +5,73 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./about.css">
     
 </head>
 <body>
    
         <header>
-        <span class="name" ><h2>Kalpana Ravindran</h2></span>
+        <span class="name" >Kalpana Ravindran</span>
         <nav class="links" ></nav> 
             <a  href="Home.html">HOME</a>
             <a class="active" href="about.html">ABOUT</a>
             <a href="portfolio.html">PORTFOLIO</a>
         </nav>
         </header>
-
+       <main>
+        <h1>
+            When I'm not helping teams be productive while maintaing a healthy work-life balance,
+            I'm doing the following things.
+          </h1>
+        <section>
+            <h2>
+                Table Tennis
+            </h2>
+            <div class="img" style="display:inline-block">
+            <img src="./images/table_tennis.jpg.webp" alt="Table_Tennis">
+            </div>
+            <div style="display:inline-block">
+                 <p>
+             Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim laudantium doloremque ex ullam cum dolorum ea aliquid facere odit, numquam repellat consectetur? Minus maiores minima numquam impedit laborum ratione sint!
+                 </p>
+                 <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam sed obcaecati at aut id iusto natus enim beatae tempora! Nobis facilis et cum magni, tenetur id consequuntur distinctio officia dolorem?
+                 </p>
+            </div>
+        </section>
+        <section>
+            <h2>
+                Trekking
+            </h2>
+            <div class="img" style="display:inline-block">
+                 <img src="./images/trekking-ama-dablam.jpg" alt="Trekking">
+            </div>
+            <div style="display:inline-block">
+                 <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus laboriosam maxime quae odio explicabo, id itaque ipsum tenetur eos harum odit quaerat illum. Placeat explicabo iste eius similique, fugit aspernatur?
+                 </p>
+                 <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam voluptatum, recusandae ab aperiam et quod voluptates ipsa eos deserunt soluta eius dolorem hic provident placeat mollitia deleniti dicta laborum nulla!
+                 </p>
+            </div>
+        </section>
+        <section>
+            <h2>
+             Learning
+            </h2>
+            <div class="img" style="display:inline-block">
+            <img src="./images/learning.jpeg" alt="Learning">
+            </div>
+            <div style="display:inline-block">
+                 <p>
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tempore animi dolorum ratione et voluptates ex est, qui praesentium? Recusandae modi non omnis asperiores? Tenetur, officiis deleniti. Excepturi reiciendis illum vitae?
+                 </p>
+                 <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero adipisci harum possimus quia exercitationem quasi tenetur. Nobis quo, sequi qui veniam ipsam, ad beatae, vitae voluptatum adipisci quisquam quam quos!
+                 </p>
+            </div>
+        </section>
+        </main>
         <footer>
             <a  href="http://twitter.com" target="_blank">
                 <img class="img_link" src="./images/twitter.svg" alt="">
