--- a/portfolio.html
+++ b/portfolio.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./portfolio.css">
 </head>
 <body>
     <header>
@@ -15,7 +16,23 @@
             <a class="active" href="portfolio.html">PORTFOLIO</a>
         </nav>
     </header>
-
+    <main>
+        <section>
+            <h2>First Project</h2>
+            <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut omnis illo ipsum? Explicabo atque ex, illo non nobis quidem voluptatum. Aperiam sit hic blanditiis ipsa enim placeat, eveniet totam aliquid.</p>
+            <p> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tempore libero quisquam tenetur similique dolores, facere laboriosam iste magnam dolor molestiae nesciunt modi itaque esse fugiat iusto minima, sunt vitae quibusdam.</p>
+        </section>
+        <section>
+            <h2>Second Project</h2>
+            <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut omnis illo ipsum? Explicabo atque ex, illo non nobis quidem voluptatum. Aperiam sit hic blanditiis ipsa enim placeat, eveniet totam aliquid.</p>
+            <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. A ipsum laudantium iure, mollitia enim facilis placeat! Iusto voluptas quis reprehenderit nesciunt culpa blanditiis cumque molestias ipsam praesentium quam. Nobis, cumque?</p>
+        </section>
+        <section>
+            <h2>Third Project</h2>
+            <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut omnis illo ipsum? Explicabo atque ex, illo non nobis quidem voluptatum. Aperiam sit hic blanditiis ipsa enim placeat, eveniet totam aliquid.</p>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minima omnis impedit dignissimos veniam, at ut facilis quia provident amet totam, adipisci et repellat laborum illo aspernatur dolores similique voluptates corporis?</p>
+        </section>
+    </main>
 
 
     <footer>
